--- a/style.css
+++ b/style.css
@@ -8,7 +8,15 @@ body {
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(16, 1fr);
-    height: 600px;
-    width: 600px;
+    height: 700px;
+    width: 700px;
     border: 1px black solid;
+}
+
+.square {
+    background: transparent;
+}
+
+.squareFill {
+    background: black;
 }
