--- a/style.css
+++ b/style.css
@@ -1,20 +1,35 @@
+@font-face {
+    font-family: '8-bit';
+    src: url(PixeloidSans-nR3g1.ttf);
+}
+
+* {
+    font-family: '8-bit';
+}
+
 body {
+    background-image: linear-gradient(#01C06E, rgb(1, 179, 192));
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+    height: 100vh;
+}   
 
 .wrapper {
     display: flex;
 }
 
+
+/* Menu */
 #menu {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border: 1px solid black;
+    align-items: center;
     padding: 20px;
     padding-right: 60px;
+    border: 3px solid black;
+    border-right: 2px solid black;
 }
 
 /* Slider */
@@ -28,6 +43,7 @@ body {
 
 /* Grid Properties */
 #gridContainer {
+    background-color: white;
     display: grid;
     height: 700px;
     width: 700px;
