--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     height: 100vh;
 }   
 
-.wrapper {
+#wrapper {
     display: flex;
 }
 
@@ -30,6 +30,24 @@ body {
     padding-right: 60px;
     border: 3px solid black;
     border-right: 2px solid black;
+}
+
+.opacityContainer {
+    margin-top: 20px;
+}
+
+#fillColor {
+    width: 10vw;
+    height: 3vw;
+}
+
+.gridSettings,
+.fillSettings {
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 2px 4px rgb(0, 0, 0, 0.8);
+    padding: 10px;
 }
 
 /* Slider */
